# cs480_steelworks

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.txt  QUICK_START.txt  README.md  assumptions_and_scope.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: Ops_Production_Log.xlsx  QE_Inspector_B_WeeklyLog.xlsx  QE_Temp_Consolidation_CopyPaste.xlsx
data/sample/: Ops_Shipping_Log.xlsx  QE_Inspector_A_DailyLog.xlsx
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_record.md  data_design.md  tech_stack_decision_record.md
src/: __init__.py  database.py  models.py  schemas.py
src/models/: __init__.py  db.py  orm_models.py
src/recurring_defects/: __init__.py  models.py  repository.py  service.py
src/repositories/: __init__.py  __init__.pybak  defect_repository.py  inspection_repository.py
src/services/: __init__.py  __init__.py.bak  recurring_defect_service.py
src/ui/: __init__.py  app.py  recurring_defects_page.py
tests/: __init__.py  test_recurring_defects.py
tests/unit/: __init__.py  test_inspection_repository.py  test_recurrence_service.py  test_recurring_defect_service.py
