[tool.poetry]
name = "cs480-steelworks"
version = "0.1.0"
description = "Quality Engineering Tool - Identify recurring defects across multiple lots over time"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.28.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"  # PostgreSQL adapter
pandas = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
